# researcher

./: .gitignore  README.md  pyproject.toml  run.sh
prompts/: literature_review_agent_2.txt  peer_reviewer.txt  proposal_writer_agent.txt  research_supervisor.txt  technical_writer.txt
researcher/: main.py  state.py
researcher/agents/: literature_review.py
researcher/utils/: _node.py  handoff.py  loader.py  pretty_print.py  tools.py
